--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "amazon-cognito-identity-js": "^3.0.11",
     "express": "^4.16.4",
+    "node-fetch": "^2.3.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.3"
   },
