--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "amazon-cognito-identity-js": "^3.0.11",
     "express": "^4.16.4",
     "node-fetch": "^2.3.0",
+    "node-jose": "^1.1.3",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.3"
   },
