--- a/api/package.json
+++ b/api/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "amazon-cognito-identity-js": "^3.0.11",
     "express": "^4.16.4",
+    "knex": "^0.16.5",
     "node-fetch": "^2.3.0",
     "node-jose": "^1.1.3",
     "npm-run-all": "^4.1.5",
+    "pg": "^7.9.0",
     "rimraf": "^2.6.3"
   },
   "devDependencies": {
