--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "amazon-cognito-identity-js": "^3.0.11",
+    "cookie-session": "^1.3.3",
     "express": "^4.16.4",
     "knex": "^0.16.5",
     "node-fetch": "^2.3.0",
