--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "modularscale-sass": "^3.0.8",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
