--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,10 @@
     "postcss-preset-env": "^6.6.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "stylelint": "^10.0.1",
+    "stylelint-config-recommended-scss": "^3.3.0",
+    "stylelint-scss": "^3.6.1",
+    "stylelint-webpack-plugin": "^0.10.5",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
